# shop_app

./: .env.example  README.md  catalog_fixture.json  products_list.html  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_delete_confirm.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py  create_moderators.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_publication_status.py  0003_product_is_publish_product_owner.py
catalog/templates/: add_product.html  base.html  contacts.html  products_detail.html  products_list.html
catalog/templates/catalog/: add_product.html  base.html  category_detail.html  category_list.html  contacts.html  home.html  product_delete_confirm.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_avatar_alter_user_country_and_more.py
users/templates/users/: login.html  register.html
