[tool.poetry]
name = "shop-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
black = "^25.1.0"
python-dotenv = "^1.0.1"
ipython = "^8.32.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
